--- a/03_indexation.qmd
+++ b/03_indexation.qmd
@@ -38,7 +38,7 @@ Indexation **par position** :
 
 `x[2,1] renvoie ''Benjamin''`
 
-![](img/clipboard-3022598537.png){fig-align="center" width="291"}
+![](img/clipboard-matrice1.png){fig-align="center"}
 
 ## Listes :
 
@@ -71,4 +71,4 @@ x ← list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")
 → Il y a donc une multitude de façons d'accéder à une valeur dans un
 data.frame !
 
-![](img/clipboard-3408078912.png)\
+![](img//clipboard-premon-sexe-taille.png)\
