--- a/formation-R-perf-Rappels.qmd
+++ b/formation-R-perf-Rappels.qmd
@@ -1,11 +1,11 @@
 ---
-title: "Formation-R-perfectiomment"
+title: "Formation-R-perfectionnement"
 subtitle: "Module Rappels et compléments sur R et RStudio"
 date: today
 date-format: "DD/MM/YYYY"
 author: "SSP/DEMESIS"
 description: |
-  Support de formation R-perfectiomment : Module Rappels pour les utilisateurs de R au MASA
+  Support de formation R-perfectionnement : Module Rappels pour les utilisateurs de R au MASA
 slide-tone: false # for blind readers
 chalkboard: false # press the B key to toggle chalkboard
 transition: slide
