--- a/formation-R-perf-Rappels.qmd
+++ b/formation-R-perf-Rappels.qmd
@@ -34,20 +34,20 @@ visuel des formations dispensées au
 [MASA](https://agreste.agriculture.gouv.fr/).
 
 Ces formations s'adressent à des agents qui ont suivi **la formation R
-initialisation**.\
+initiation**.\
 
 ## Avant-propos
 
-Elles sont données en présentiel sur une durée **de trois journée**, les
+Elles sont données en présentiel sur une durée **de 3 jours**, les
 modules de cette formation sont ajustables suivants le choix des agents.
 
 ::: callout-note
 ## Champ couvert par cette formation
 
 **Ce support couvre les rappels et complèments sur R et l'environnement
-du Minsitère.**
+du MASAF.**
 
-Pour information, Les Modules de la formation R-perfectionnement sont:
+Pour information, Les modules de la formation R-perfectionnement sont:
 
 -   01 - Module Rappels
 
@@ -63,7 +63,7 @@ Pour information, Les Modules de la formation R-perfectionnement sont:
 
 -   07 - Module Initiation à l'écriture d'applications Shiny
 
-Ils sont orientés pour être utile aux agents du SSM MASA et se
+Ils sont orientés pour être utile aux agents du SSM Agriculture et se
 concentrent sur une utilisation de R via
 [RStudio](https://posit.co/download/rstudio-desktop/) qui est mise à
 disposition des agents sur la plateforme interne Cerise basée sur
