doc: relecture quarto 01

--- a/01_Travailler-avec-R-ministere.qmd
+++ b/01_Travailler-avec-R-ministere.qmd
@@ -1,6 +1,6 @@
 # Travailler avec R au ministère {.backgroundTitre}
 
-## Présentation {.backgroundTitre}
+## Présentation
 
 Logiciel de traitement de données et analyse statistique :
 
